# nrf9160_cortexm33_itc_crossplatform

./: .cproject  .project  CMakeLists.txt  README.md  nrf9160dk_nrf9160.overlay  prj.conf
src/: eventfunctor.h  eventmanager.cpp  eventmanager.h  eventpack.cpp  eventpack.h  global.h  heartbeat.cpp  heartbeat.h  main.cpp  memtracer.cpp  memtracer.h  test_uart00.cpp  test_uart00.h  test_uart01.cpp  test_uart01.h  test_uart02.cpp  test_uart02.h  watchdog.cpp  watchdog.h
